# aws-rust

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  serverless.yml
.cargo/: config.toml
.github/workflows/: deploy-main.yml
prisma/: schema.prisma
src/: lib.rs  main.rs  server.rs
src/api/: mod.rs
src/api/dev/: controller.rs  mod.rs
src/api/planetscale/: controller.rs  mod.rs
src/api/todos/: controller.rs  mod.rs
src/api/users/: controller.rs  mod.rs
src/models/: todo.rs  user.rs
src/prisma_models/: mod.rs  user_model.rs
