[package]
name = "aws-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"
opt-level = 3     # 0-3
strip = 'symbols' # strip symbols from binary
lto = true        # enable link time optimization

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.68"
async_once = "0.2.6"
async-trait = "0.1.59"
bson = { version = "2.4.0", features = ["chrono-0_4"] }
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.25"
lambda_http = "0.7.2"
lambda_runtime = "0.7.2"
lambda-web = { version = "0.2.0", features = ["actix-web", "actix4"] }
lazy_static = "1.4.0"
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
nanoid = "0.4.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3" }
rayon = "1.6.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rust-argon2 = "1.0.0"
rand = "0.8.5"
slug = "0.1.4"
md5 = "0.7.0"
